(lang dune 3.16)

(name eio_test)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name eio_test)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune eio_unix eio)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
